fix(Table): dark mode support

--- a/src/components/Table/TableHead/TableHeaderCell/TableHeaderCell.module.scss
+++ b/src/components/Table/TableHead/TableHeaderCell/TableHeaderCell.module.scss
@@ -3,15 +3,15 @@
   text-transform: uppercase;
   letter-spacing: 0.05em;
   white-space: nowrap;
-  border-color: var(--table-border-color, var(--INTERNAL_table-border-color));
+  border-color: var(--color-border-default);
   border-bottom-style: solid;
-  border-width: 0 0 var(--table-header-border-width, var(--INTERNAL_table-header-border-width)) 0;
-  background-color: var(--table-header-background-color, var(--INTERNAL_table-header-background-color));
-  color: var(--table-header-font-color, var(--INTERNAL_table-header-font-color));
-  font-size: var(--table-header-font-size, var(--INTERNAL_table-header-font-size));
-  font-weight: var(--table-header-font-weight, var(--INTERNAL_table-header-font-weight));
-  padding: var(--table-padding-vertical, var(--INTERNAL_table-padding-vertical))
-    var(--table-padding-horizontal, var(--INTERNAL_table-padding-horizontal));
+  border-width: 0 0 var(--size-border-sm) 0;
+  background-color: var(--color-background-primary);
+  color: var(--color-font-primary);
+  font-size: var(--size-font-size-sm);
+  font-weight: var(--size-font-weight-bold);
+  padding: var(--size-spacing-md)
+  var(--size-spacing-lg);
 
   &.sortable {
     cursor: pointer;
@@ -28,8 +28,7 @@
   }
 
   &.compact {
-    padding: var(--table-compact-padding-vertical, var(--INTERNAL_table-compact-padding-vertical))
-      var(--table-compact-padding-horizontal, var(--INTERNAL_table-compact-padding-horizontal));
+    padding: var(--size-spacing-sm) var(--size-spacing-md);
   }
 
   &.sticky-header {
@@ -51,7 +50,7 @@
     position: sticky;
     z-index: calc(var(--size-z-index-sticky) + 1);
     box-shadow: 5px 0 5px -2px rgb(0 0 0 / 10%), -5px 0 5px -2px rgb(0 0 0 / 10%);
-    background-color: var(--table-header-background-color, var(--INTERNAL_table-header-background-color));
+    background-color: var(--color-background-primary);
   }
 
 
@@ -67,7 +66,7 @@
     white-space: nowrap;
 
     .sort-icon {
-      margin-left: var(--table-header-sort-icon-spacing, var(--INTERNAL_table-header-sort-icon-spacing));
+      margin-left: var(--size-spacing-xs);
     }
   }
 }
